native/wdsp/wdsp.h

///////////////////////////////////////////////////////////
//                             //
// All what follows is machine-generated by the command  //
// "make_interface *.c"                  //
//                             //
// This should be repeated in regular intervals, such  //
// that API changes are detected automatically.      //
//                             //
///////////////////////////////////////////////////////////


//
// Interfaces from RXA.c
//

extern void SetRXAMode (int channel, int mode);
extern void SetRXAAMDSBMode(int channel, int sbmode);
//
// Interfaces from amsq.c
//

extern void SetRXAAMSQRun (int channel, int run);
extern void SetCalibration (  int disp,
                              int set_num,
                              int n_points,
                              double (*cal)[dMAX_M + 1]
                           );
extern void SetRXABandpassRun (int channel, int run);
extern void SetRXABandpassFreqs (int channel, double f_low, double f_high);
extern void SetRXABandpassWindow (int channel, int wintype);
extern void SetRXABandpassNC (int channel, int nc);
extern void SetRXABandpassMP (int channel, int mp);
//
// Interfaces from channel.c
//

extern void OpenChannel (int channel, int in_size, int dsp_size, int input_samplerate, int dsp_rate,
                         int output_samplerate,
                         int type, int state, double tdelayup, double tslewup, double tdelaydown, double tslewdown, int bfo);
extern void CloseChannel (int channel);
extern void SetInputSamplerate (int channel, int in_rate);
extern void SetOutputSamplerate (int channel, int out_rate);
//
// Interfaces from dexp.c
//

extern void create_dexp (int id, int run_dexp, int size, double* in, double* out, int rate, double dettau,
                         double tattack, double tdecay,
                         double thold, double exp_ratio, double hyst_ratio, double attack_thresh, int nc, int wtype, double lowcut,
                         double highcut,
                         int run_filt, int run_vox, int run_audelay, double audelay, void (__stdcall *pushvox)(int id, int active),
                         int antivox_run, int antivox_size, int antivox_rate, double antivox_gain, double antivox_tau);
extern void SendCBPushDexpVox (int id, void (__stdcall *pushvox)(int id, int active));
extern void RXANBPSetShiftFrequency (int channel, double shift);
extern void RXANBPSetFreqs (int channel, double flow, double fhigh);
extern void RXANBPSetNC (int channel, int nc);
extern void RXANBPSetMP (int channel, int mp);
//
// Interfaces from patchpanel.c
//

extern void SetRXAPanelRun (int channel, int run);
extern void SetRXAPanelSelect (int channel, int select);
extern void SetRXAPanelGain1 (int channel, double gain);
extern void SetRXAPanelBinaural (int channel, int bin);
//
// Interfaces from shift.c
//

extern void SetRXAShiftRun (int channel, int run);
extern void SetRXAShiftFreq (int channel, double fshift);
extern void SetRXASNBAOutputBandwidth (int channel, double flow, double fhigh) ;
extern void RXABPSNBASetNC (int channel, int nc);
extern void RXABPSNBASetMP (int channel, int mp);
//
// Interfaces from ssql.c
//

extern void SetRXASSQLRun (int channel, int run);
extern void SetRXASSQLThreshold (int channel, double threshold);
extern void SetRXASSQLTauMute (int channel, double tau_mute);
extern void SetRXASSQLTauUnMute (int channel, double tau_unmute);
//
// Interfaces from wcpAGC.c
//

extern void SetRXAAGCMode (int channel, int mode);
extern void SetRXAAGCAttack (int channel, int attack);
extern void SetRXAAGCDecay (int channel, int decay);
extern void SetRXAAGCHang (int channel, int hang);
extern void SetRXAAGCHangThreshold (int channel, int hangthreshold);
extern void GetRXAAGCThresh(int channel, double *thresh, double size, double rate);
extern void SetRXAAGCThresh(int channel, double thresh, double size, double rate);
extern void GetRXAAGCTop(int channel, double *max_agc);
extern void SetRXAAGCTop (int channel, double max_agc);
extern void SetRXAAGCSlope (int channel, int slope);
extern void SetRXAAGCFixed (int channel, double fixed_agc);