Zeus.Dsp/Wdsp/NativeMethods.cs

// SPDX-License-Identifier: GPL-2.0-or-later
//
// Zeus — OpenHPSDR Protocol-1 / Protocol-2 client.
// Copyright (C) 2025-2026 Douglas J. Cerrato (KB2UKA),
//                         Christian Suarez (N9WAR), and contributors.
//
// This program is free software: you can redistribute it and/or modify it
// under the terms of the GNU General Public License as published by the
// Free Software Foundation, either version 2 of the License, or (at your
// option) any later version. See the LICENSE file at the root of this
// repository for the full text, or https://www.gnu.org/licenses/.
//
// Zeus is an independent reimplementation in .NET — not a fork. Its
// Protocol-1 / Protocol-2 framing, WDSP integration, meter pipelines, and
// TX behaviour were informed by studying the Thetis project
// (https://github.com/ramdor/Thetis), the authoritative reference
// implementation in the OpenHPSDR ecosystem. Zeus gratefully acknowledges
// the Thetis contributors whose work made this possible:
//
//   Richard Samphire (MW0LGE), Warren Pratt (NR0V),
//   Laurence Barker (G8NJJ),   Rick Koch (N1GP),
//   Bryan Rambo (W4WMT),       Chris Codella (W2PA),
//   Doug Wigley (W5WC),        FlexRadio Systems,
//   Richard Allen (W5SD),      Joe Torrey (WD5Y),
//   Andrew Mansfield (M0YGG),  Reid Campbell (MI0BOT),
//   Sigi Jetzlsperger (DH1KLM).
//
// Thetis itself continues the GPL-governed lineage of FlexRadio PowerSDR
// and the OpenHPSDR (TAPR/OpenHPSDR) ecosystem; that lineage is preserved
// here. See ATTRIBUTIONS.md at the repository root for the full provenance
// statement and per-component attribution.
//
// Protocol-2 / PureSignal / Saturn-class behaviour was additionally informed
// by pihpsdr (https://github.com/dl1ycf/pihpsdr), maintained by Christoph
// Wüllen (DL1YCF); and by DeskHPSDR
// (https://github.com/dl1bz/deskhpsdr), maintained by Heiko (DL1BZ).
// Both are GPL-2.0-or-later.
//
// WDSP — loaded by Zeus via P/Invoke — is Copyright (C) Warren Pratt
// (NR0V), distributed under GPL v2 or later.
//
// Zeus is distributed WITHOUT ANY WARRANTY; see the GNU General Public
// License for details.

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace Zeus.Dsp.Wdsp;

internal static partial class NativeMethods
{
    internal const string LibraryName = "wdsp";

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void OpenChannel(
        int channel,
        int in_size,
        int dsp_size,
        int input_samplerate,
        int dsp_rate,
        int output_samplerate,
        int type,
        int state,
        double tdelayup,
        double tslewup,
        double tdelaydown,
        double tslewdown,
        int bfo);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void CloseChannel(int channel);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetInputSamplerate(int channel, int samplerate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetOutputSamplerate(int channel, int samplerate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXABandpassFreqs(int channel, double f_low, double f_high);

    // SetRXABandpassFreqs alone only updates bp1 (bypassed for SSB). The SSB
    // passband is enforced by nbp0 (notch-bandpass), which is set by
    // RXANBPSetFreqs. SNBA tracks the output bandwidth. Thetis rxa.cs:110-124
    // calls all three together whenever the filter edges change — so do we.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetFreqs(int channel, double f_low, double f_high);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASNBAOutputBandwidth(int channel, double f_low, double f_high);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXABandpassRun(int channel, int run);

    // CTUN frequency shift — WDSP's `shift` stage (wdsp/shift.c). Mirrors the
    // Thetis trio at radio.cs:1419: when the operator clicks off-centre while
    // CTUN is on we shift the IF by (dial - radioLoHz) so the tuned signal
    // lands at baseband for the (unmodified) bandpass filter. Calling
    // SetRXABandpassFreqs with a shifted range works for the bp1 stage but
    // breaks SSB (the nbp0 stage that actually enforces the SSB passband
    // expects sideband-signed values; a negative-going CTUN offset on USB
    // crashes WDSP). The shift stage is the correct seam. Issue #427.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAShiftFreq(int channel, double freq);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAShiftRun(int channel, int run);

    // Paired with SetRXAShiftFreq — Thetis radio.cs:1420 calls both together.
    // nbp0 is the SSB-enforcing notch-bandpass stage and needs the same
    // shift applied to keep its passband centred on the tuned signal.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetShiftFrequency(int channel, double freq);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXABandpassWindow(int channel, int wintype);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetNC(int channel, int nc);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXANBPSetMP(int channel, int mp);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXABPSNBASetNC(int channel, int nc);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void RXABPSNBASetMP(int channel, int mp);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXABandpassNC(int channel, int nc);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXABandpassMP(int channel, int mp);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAPanelRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAPanelGain1(int channel, double gain);

    // select=3 routes both I and Q into the RXA chain — without it WDSP gets
    // a real-valued signal and cannot separate sidebands (LSB/USB sound identical).
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAPanelSelect(int channel, int select);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAPanelBinaural(int channel, int bin);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAMDSBMode(int channel, int sbmode);

    // AGC bindings — mode 3 (MED) is the Thetis default; without this the WDSP
    // output stays near the raw post-demod level (HL2 signals ~2e-5 peak),
    // which reaches the browser as near-silence or whisper-quiet hiss.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCMode(int channel, int mode);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCSlope(int channel, int slope);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCTop(int channel, double max_agc);

    // AGC threshold ("knee"), in dBm. size = FFT/buffer size, rate = sample rate;
    // WDSP uses them to convert the dBm threshold to its internal level scale.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCThresh(int channel, double thresh, double size, double rate);

    // Reads back the AGC max-gain ("top") WDSP recomputed after a threshold
    // change (out param). Declared for the Thetis-style top read-back/mirror.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetRXAAGCTop(int channel, ref double max_agc);

    // Reads the current AGC threshold ("knee"), in dBm (out param). Used to
    // capture WDSP's per-mode default knee before the operator overrides it, so
    // "disengage" can restore it. size/rate match SetRXAAGCThresh.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void GetRXAAGCThresh(int channel, ref double thresh, double size, double rate);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCAttack(int channel, int attack);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCHang(int channel, int hang);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCDecay(int channel, int decay);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCHangThreshold(int channel, int hangthreshold);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAGCFixed(int channel, double fixed_agc);

    // RX squelch — three independent WDSP stages auto-selected by RX mode
    // (Thetis parity §5): SSQL for SSB/CW, AMSQ for AM/SAM, FMSQ for FM. Only
    // one runs at a time; the engine clears the other two on every apply.
    // Voice (SSB/CW) — ssql.h. Threshold 0.0..1.0; tau_mute/tau_unmute in s.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASSQLRun(int channel, int run);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASSQLThreshold(int channel, double threshold);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASSQLTauMute(int channel, double tau_mute);

    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXASSQLTauUnMute(int channel, double tau_unmute);

    // AM — amsq.h. Threshold in dB (-150..0); max_tail in s.
    [LibraryImport(LibraryName)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial void SetRXAAMSQRun(int channel, int run);
